# garmintools

./: .cirrus.yml  .gitignore  .travis.ci  .travis.yml  INSTALL.md  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
build-aux/meson/: postinstall.py
doc/: meson.build
doc/man/: garmin_tcx.1
extras/: 10-garmin.rules
python/: meson.build  py3garmin.c  pygarmin.c
src/: Makefile.am  byte_util.c  command.c  datatype.c  garmin.h  garmin_convert.c  garmin_dump.c  garmin_gchart.c  garmin_get_info.c  garmin_gmap.c  garmin_gpx.c  garmin_save_runs.c  garmin_tcx.c  garmintool.c  meson.build  pack.c  packet_id.c  print.c  protocol.c  run.c  scan.c  symbol_name.c  unpack.c  usb_comm.c
